# ChangeLog for dev-util/giggle
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/giggle/ChangeLog,v 1.14 2009/04/03 12:36:50 ikelos Exp $

  03 Apr 2009; Mike Auty <ikelos@gentoo.org> giggle-0.4.91.ebuild:
  Add dependency on libtool-2, fixes bug 264745.

*giggle-0.4.91 (03 Apr 2009)

  03 Apr 2009; Mike Auty <ikelos@gentoo.org>
  +files/giggle-0.4.91-libgiggle.patch, +giggle-0.4.91.ebuild:
  Version bump giggle to development version 0.4.91.

  15 Feb 2009; Mike Auty <ikelos@gentoo.org> giggle-0.4.90.ebuild:
  Giggle-0.4.90 depends on glib-2.18, thanks to Jose Marino (bug 259054).

  14 Feb 2009; Mike Auty <ikelos@gentoo.org> giggle-0.4.90.ebuild:
  Add in dependency on evolution-data-server, which can't be configured out,
  and is needed for a giggle plugin.

*giggle-0.4.90 (14 Feb 2009)

  14 Feb 2009; Mike Auty <ikelos@gentoo.org> +giggle-0.4.90.ebuild:
  Version bump, thanks to mraudsepp for the request.

  26 Jan 2009; Mike Auty <ikelos@gentoo.org> giggle-0.4.ebuild:
  Fix homepage on most recent giggle ebuild.

  15 Jan 2009; Mike Auty <ikelos@gentoo.org> metadata.xml:
  Compnerd's retired, taking over giggle.

*giggle-0.4 (27 Jan 2008)

  27 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org> +giggle-0.4.ebuild:
  Version bump from upstream

  12 Oct 2007; Rémi Cardona <remi@gentoo.org> giggle-0.2.ebuild,
  giggle-0.3.ebuild:
  update gtksourceview deps (see bug #195366)

  16 May 2007; Joseph Jezak <josejx@gentoo.org> giggle-0.2.ebuild,
  giggle-0.3.ebuild:
  Marked ~ppc for bug #178677.

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

*giggle-0.3 (13 May 2007)

  13 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> +giggle-0.3.ebuild:
  Version bump from upstream

  13 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> giggle-0.2.ebuild:
  Fix the really broken dependencies

*giggle-0.2 (11 May 2007)
