@@ -2,8 +2,8 @@ AUX giggle-0.4.91-libgiggle.patch 1132 RMD160 3dcae577895b1ed934b8c6bbf9590040ca
 DIST giggle-0.4.90.tar.bz2 414880 RMD160 34a0c843d3ce4a100ed20d52a8e03b8aa076cf80 SHA1 416bf6e98523517e023f6750cabffce32963c9a0 SHA256 a0a14bd15b538c746b688f9fc08fd6b225533b307ca9ef085e795285853ef21c
 DIST giggle-0.4.91.tar.bz2 416878 RMD160 a9b27c650f5f5356172894298f5b5cc6587b89da SHA1 9dde9736714aa41a4550dc817082ffe49f62ede9 SHA256 1f7025b336b176d54d0c1794309b53699785912a6468a4ca4a96f9c5b699d8c3
 DIST giggle-0.4.tar.gz 539885 RMD160 6e4d6691179c4a0d43bc0f252603ca911683cddc SHA1 6cb44e5a64a8279aee2e19e00d8714cd3b0f43aa SHA256 e46399530676a9a2473473471c0ee8a3c417923756867c83c1f70653c13409ad
-EBUILD giggle-0.4.90.ebuild 676 RMD160 b7c7ee8b748dfdca6ae4a6f4486047158fc6ff11 SHA1 72fa3b5217e743576c7a36f32c4d7c7879fa13b6 SHA256 a2d64b1e0104b23557492cd9935b624daa0bbab7e6933c21e45991600f7aa90a
-EBUILD giggle-0.4.91.ebuild 876 RMD160 8ce7fbbebef78d269a4445d26a9a635b0106b6ed SHA1 6e94512eef6d756e590e563d92c89b7a9567c1f4 SHA256 50b7c9e938d2ab984f01b0b418e153063e4ee1365dee90d8fce0386ac9b0852a
-EBUILD giggle-0.4.ebuild 703 RMD160 4625efe2d17f4386b7d752c63e1e1b0c85e1ecc7 SHA1 c1e89af68bbe93f5a11d75d26afa5789a65358c4 SHA256 efb36153bed0f693fe166fd6b32d179e1c95535527ff54f4fd3309ee61cdd7cd
-MISC ChangeLog 2074 RMD160 c6a604c53cb4b728a99fedd370875f97bcef12b5 SHA1 a44f464a14948e4f280a93a6d1f5779b2ad7cb24 SHA256 35710c03999ff1365593bc20924786566354071d8443620f5a824c64e04238cd
+EBUILD giggle-0.4.90.ebuild 714 RMD160 fe32ae1418e397b2908abfbe389eed569ab4732d SHA1 fbc235266f15389da0c38ccec8c1173553cd6319 SHA256 b95f7defc3200a8c2bf10c2f7e5b3370134c2ddf4f1cd1cc9a3be5d0a313caf5
+EBUILD giggle-0.4.91.ebuild 914 RMD160 fd4a39ec4f1c297227a23c45e02e4eb37d7e247d SHA1 702b629c9d3871a4a9d6940f2dfaafbe96e9b3ef SHA256 30595df6984bfef05880be095606ede6e14fb6f34617fc072e74e4531285b554
+EBUILD giggle-0.4.ebuild 741 RMD160 c32b70369166029046e1e887295e3a11baddabd2 SHA1 61a5698896773f89770c769f48efd4f26cb9f6b2 SHA256 601ab1fc310ccd4f06b472b42e9fc5f30b42acba8aedbc124c50912a907e6ebf
+MISC ChangeLog 2294 RMD160 07da1db3bdacc8f1cc33eb53364983c86a1b5365 SHA1 076cd68ec78b178d4e9b9494b293e6150dc29b70 SHA256 83da3268b1fb8b662d8896ad15df3802739d402d035f4142b951090a86bfeba2
 MISC metadata.xml 330 RMD160 ebd81b774e9fc194d76d6972ae0b5242563f7716 SHA1 c88cb5bd6aa8480f9f939be1890eda2dea083a19 SHA256 34755ef9637f42e2a77bd8159b8b7679bb3e619d5d5fa7b7dc36a8fbeb2c96f7
