@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/giggle/giggle-0.4.ebuild,v 1.2 2009/01/26 20:24:45 ikelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/giggle/giggle-0.4.ebuild,v 1.3 2009/04/29 10:16:16 ikelos Exp $
 
 EAPI=1
 
@@ -24,3 +24,5 @@ DEPEND="${RDEPEND}
 		  sys-devel/gettext
 		>=dev-util/pkgconfig-0.15
 		>=dev-util/intltool-0.35"
+
+DOCS="AUTHORS ChangeLog NEWS README"
